--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   displayName: 'Build and Push Docker Images'
   inputs:
     command: 'buildAndPush'
-    containerRegistry: 'DockerHub'
+    containerRegistry: 'ipapadod/vivawalletproject'
     tags: |
       user-service:$(Build.BuildId)
       order-service:$(Build.BuildId)
