--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,24 @@
 trigger:
 - master
 
+resources:
+- repo: self
 
 variables:
   tag: '$(Build.BuildId)'
 
-- task: DockerCompose@0
-  inputs:
-    containerregistrytype: 'Container Registry'
-    dockerRegistryEndpoint: 'VivaWalletProjects'
-    dockerComposeFile: 
-    action: 'Build services'
-
+stages:
+- stage:Build
+  displayname: Build Image
+  jobs:
+  -  job: Build
+     displayName: Build
+     pool:
+       vmImage: 'ubuntu-latest'
+     steps:
+     -task: Docker@2
+      displayName: Build and Push
+      inputs:
+        command: build and Push
+        containerRegistry: 'VivaWalletProjects'
+        repository: 'vivawalletproject' 
