--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,16 +9,10 @@ variables:
 
 stages:
 - stage:Build
-  displayname: Build Image
+  displayname: Build image
   jobs:
   -  job: Build
      displayName: Build
      pool:
        vmImage: 'ubuntu-latest'
-     steps:
-     -task: Docker@2
-      displayName: Build and Push
-      inputs:
-        command: build and Push
-        containerRegistry: 'VivaWalletProjects'
-        repository: 'vivawalletproject' 
+
