--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,9 @@ resources:
 variables:
   tag: '$(Build.BuildId)'
 
-stages:
-- stage:Build
-  displayname: Build image
-  jobs:
-  -  job: Build
-     displayName: Build
-     pool:
-       vmImage: 'ubuntu-latest'
-
+- task: Docker@2
+  inputs:
+    containerRegistry: 'VivaWalletProjects'
+    repository: 'vivawalletproject'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
