Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ resources:
 variables:
   tag: '$(Build.BuildId)'
 
+steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'VivaWalletProjects'
