--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,7 @@ resources:
 variables:
   tag: '$(Build.BuildId)'
 
-steps:
-- task: Docker@2
+task: Docker@2
   inputs:
     containerRegistry: 'VivaWalletProjects'
     repository: 'vivawalletproject'
