--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,15 @@ resources:
 variables:
   tag: '$(Build.BuildId)'
 
-task: Docker@2
+steps:
+- task: Docker@2
   inputs:
     containerRegistry: 'VivaWalletProjects'
-    repository: 'vivawalletproject'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+    command: 'login'
+
+- task: Docker@2
+      inputs:
+        containerRegistry: 'VivaWalletProjects'
+        repository: 'vivawalletproject'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
