--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -8,9 +8,9 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-#    - task: Python@3
-#      inputs:
-#        version: '3.x'
+    - task: Python@3
+      inputs:
+        version: '3.x'
 #    - script: |
 #        pip install -r requirements.txt
 #      displayName: 'Install dependencies'
