--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -8,14 +8,14 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    - task: Python@3
+#    - task: Python@3
       inputs:
         version: '3.x'
     - script: |
         pip install -r requirements.txt
       displayName: 'Install dependencies'
     - script: |
-#        python -m pytest -v --junitxml=results/test-results.xml
+        python -m pytest -v --junitxml=results/test-results.xml
       displayName: 'Run tests'
     - script: |
         echo "Building the Docker image"
