Update azure-pipelines2.yaml for Azure Pipelines

--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -8,7 +8,7 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-#    - task: Python@3
+    - task: Python@3
       inputs:
         version: '3.x'
     - script: |
