--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -10,7 +10,7 @@ stages:
     steps:
     - task: Python@3
       inputs:
-        version: '3.x'
+        version: '3.6'
     - script: |
         pip install -r requirements.txt
       displayName: 'Install dependencies'
