--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -10,14 +10,26 @@ stages:
     steps:
     - script: |
         echo "Building the Docker image"
-        imageName=VivaImage
-        docker build -t $imageName .
-      displayName: 'Build Docker image'
+        docker build -t $(imageName) .
+        echo "Running unit tests"
+        python -m unittest main.py
+      displayName: 'Build and Test'
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'test-results.xml'
+    - task: Docker@2
+      inputs:
+        command: 'build'
+        containerRegistry: '$(VivaWalletProjects)'
+        repository: '$(vivawalletproject)'
+        tags: '$(Build.BuildId)'
+        Dockerfile: 'Dockerfile'
     - task: Docker@2
       inputs:
         command: 'push'
-        containerRegistry: 'VivaWalletProjects'
-        repository: 'vivawalletproject'
+        containerRegistry: '$(VivaWalletProjects)'
+        repository: '$(vivawalletproject)'
         tags: '$(Build.BuildId)'
 
 - stage: Deploy
@@ -51,7 +63,7 @@ stages:
                     spec:
                       containers:
                       - name: vivawalletproject
-                        image: 'vivawalletprojects/vivawalletproject:$(Build.BuildId)'
+                        image: '$(VivaWalletProjects)/$(vivawalletproject):$(Build.BuildId)'
                         ports:
                         - containerPort: 80
           - task: Kubernetes@1
