--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -1,6 +1,8 @@
 # Use an official Python runtime as the base image
 FROM python:3.8-slim
 
+FROM ipapadod/vivawalletproject:vivaimage
+
 # Set the working directory
 WORKDIR /app
 
