--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -37,7 +37,7 @@ stages:
     - task: PublishTestResults@2
       inputs:
         testResultsFormat: 'JUnit'
-        testResultsFiles: 'test-results.xml'
+        testResultsFiles: 'results/test-results.xml'
     - task: Docker@2
       inputs:
         command: 'build'
