--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -5,11 +5,11 @@ FROM python:3.8-slim
 WORKDIR /app
 
 # Copy the requirements file and install dependencies
-COPY requirements.txt .
+COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the application code
-COPY . .
+COPY . /app
 
 # Expose the port for the service to run on
 EXPOSE 8080
