Update azure-pipelines2.yaml for Azure Pipelines

--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -5,7 +5,7 @@ variables:
   - name: imageName
     value: 'vivaimage'
   - name: containerRegistry
-    value: 'https://hub.docker.com/repository/docker/ipapadod/vivawalletproject/General'
+    value: 'vivawalletproject'
   - name: repository
     value: 'ipapadod/vivawalletproject'
 
