--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -8,7 +8,7 @@ variables:
     value: 'vivawalletproject'
   - name: repository
     value: 'ipapadod/vivawalletproject'
-  - name: localVM
+  - name: sshEndpoint
     value: '127.0.0.1 59790'
 
 
