--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -68,7 +68,7 @@ stages:
           steps:
           - task: CopyFiles@2
             inputs:
-              sourceFolder: '$(System.DefaultWorkingDirectory)/image'
+              sourceFolder: '$(System.DefaultWorkingDirectory)'
               targetFolder: '/home/testingsViva'
               cleanTargetFolder: true
               copyOptions: '-p'
