--- a/azure-pipelines2.yaml
+++ b/azure-pipelines2.yaml
@@ -77,8 +77,10 @@ stages:
           - task: SSH@0
             inputs:
               sshEndpoint: '$(sshEndpoint)'
-              scriptSource: 'inline'
-              inlineScript: |
+              runOptions: 'commands'
+              commands:
+              #scriptSource: 'inline'
+              #inlineScript: |
                 sudo docker pull vivaimage
                 sudo docker run -d -p 59790:59790 vivaimage
                 #docker pull <image-name>:<image-tag>
